# data-engineer-demo

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dataset/: 20april2020.tif  22april2020.tif
src/demo/: __init__.py  __main__.py  client.py  consumer.py  elastic.py  producer.py
